--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@ Premium: http://www.gridgum.com
 /* Import fonts */
 @import url(http://fonts.googleapis.com/css?family=Ruda:400,700,900);
 
+
 /* BASIC THEME CONFIGURATION */
 body {
     color: #797979;
@@ -2269,4 +2270,10 @@ label {
     min-height: 900px;
 }
 
+.tab-content > .tab-pane {
+  display: none;
+}
 
+.tab-content > .active {
+  display: block;
+}
