--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -443,10 +443,19 @@ ul.sidebar-menu li a.active i {
     padding-bottom: 15px;
     padding-top: 0px;
     width: 100%;
+	margin-bottom: -40px;
 }
 
 a.logo {
     font-size: 20px;
+    color: #ffffff;
+    float: left;
+    margin-top: 15px;
+    text-transform: uppercase;
+}
+
+a.logosmall {
+    font-size: 15px;
     color: #ffffff;
     float: left;
     margin-top: 15px;
@@ -2260,17 +2269,10 @@ label {
     overflow-x: hidden;
 }
 
-/*footer*/
-.site-footer {
-    background: #68dff0;
-	width:100%;
-	height:40px;
-	position:absolute;
-	bottom:0;
-	left:0;
-	z-index: -1;
+.wrapper:after {
+  content: "";
+  display: block;
 }
-
 
 .go-top {
     margin-right: 1%;
